Updated swagger to have POST /fen endpoint
