# src/server/chess-api/swagger_server/models/__init__.py
@@ -3,6 +3,7 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
+from swagger_server.models.fen_request import FenRequest
 from swagger_server.models.move import Move
 from swagger_server.models.opening import Opening
 from swagger_server.models.opening_meta import OpeningMeta
